--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                         <span class="text-primary">Zalduendo</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">zalduend1@univ-lorraine.fr</a>
+                        PHD Student at Université de Lorraine · INRIA Grand Est
+                        <a href="mailto:zalduend1@univ-lorraine.fr">zalduend1@univ-lorraine.fr</a>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
