Enlaces Coralie y Denis

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         PHD Student at Université de Lorraine · INRIA Grand Est
                         <a href="mailto:zalduend1@univ-lorraine.fr">zalduend1@univ-lorraine.fr</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">I am currently a PhD Student at Université de Lorraine and INRIA Grand Est under the Supervision of <a href="http://coralie-fritsch.perso.math.cnrs.fr">Coralie Fritsch</a> and <a href="http://www.normalesup.org/~villemonais/">Denis Villemonais</a></p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
